--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,3 +17,13 @@ body {
 #contenedor h1 {
     font-size: 30px;
 }
+
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 50px gray;
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
